--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>diffeomorphio.github.io</title>
+<title>ks</title>
 <meta name="robots" content="noarchive" />
 </head>
 <body></body>
